视频转换速度修改

--- a/public/html/gif/index.html
+++ b/public/html/gif/index.html
@@ -19,8 +19,9 @@
 <nav class="navbar">
   <a class="logo" href="#">图片在线编辑</a>
   <ul class="nav-list">
-    <li class="nav-link"><a href="../ps">图片处理</a></li>
-    <li class="nav-link active"><a>GIF生成</a></li>
+    <a href="../ps"><li class="nav-link">图片处理</li></a>
+    <a><li class="nav-link active">GIF生成</li></a>
+    <a href="../gif/video_to_gif.html"><li class="nav-link">视频转GIF</li></a>
   </ul>
 </nav>
 <div class="main">
