--- a/public/html/gif/index.html
+++ b/public/html/gif/index.html
@@ -21,7 +21,7 @@
   <ul class="nav-list">
     <a href="../ps"><li class="nav-link">图片处理</li></a>
     <a><li class="nav-link active">GIF生成</li></a>
-    <a href="../gif/video_to_gif.html"><li class="nav-link">视频转GIF</li></a>
+    <a href="../video_to_gif"><li class="nav-link">视频转GIF</li></a>
   </ul>
 </nav>
 <div class="main">
