--- a/public/html/ps/index.html
+++ b/public/html/ps/index.html
@@ -20,7 +20,7 @@
   <a class="logo" href="#">图片在线编辑</a>
   <ul class="nav-list">
     <a><li class="nav-link active">图片处理</li></a>
-    <a href="../gif/index"><li class="nav-link">GIF生成</li></a>
+    <a href="../gif"><li class="nav-link">GIF生成</li></a>
     <a href="../video_to_gif"><li class="nav-link">视频转GIF</li></a>
   </ul>
 </nav>
